# 250cw2

./: .gitignore  README.md
labs/mtc_tutorial/: CMakeLists.txt
labs/mtc_tutorial/src/: mtc_tutorial.cpp
labs/pcl_tutorial/: CMakeLists.txt  LICENSE  package.xml
labs/pcl_tutorial/config/: pcl_tutorial.yaml
labs/pcl_tutorial/launch/: pcl_tutorial.launch.py  pcl_tutorial.launch.xml  pcl_tutorial.launch.yaml
labs/pcl_tutorial/rviz/: Recorded-Can_filtered_segmented.rviz  Recorded-Can_raw.rviz
labs/pcl_tutorial/src/: pcl_tutorial_node.cpp
src/courseworks/cw1_team_36/: CMakeLists.txt  README.md  default.rviz  package.xml
src/courseworks/cw1_team_36/include/: cw1_class.h
src/courseworks/cw1_team_36/launch/: run_solution.launch  run_solution.launch.py
src/courseworks/cw1_team_36/src/: cw1_class.cpp  cw1_node.cpp
src/courseworks/cw2_team_36/: CMakeLists.txt  package.xml
src/courseworks/cw2_team_36/include/: cw2_class.h
src/courseworks/cw2_team_36/launch/: run_solution.launch  run_solution.launch.py
src/courseworks/cw2_team_36/scripts/: stl2pcd.py
src/courseworks/cw2_team_36/src/: cw2_class.cpp
src/courseworks/cw2_world_spawner/scripts/: world_spawner.py
src/courseworks/rpl_panda_with_rs/launch/: display.launch.py
